--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
+    <div class="container">
+        <button class="rock"> Rock</button>
+        <button class="paper"> Paper</button>
+        <button class="scissors"> Scissors</button>
+    </div>
+    <div class="score">
+        <span class="player-score">0</span>
+        <span> - </span>
+        <span class="computer-score">0</span>
+    </div>
     <script src="script.js"> </script>
 </body>
 </html>
